test/type/fail/field_assign_incompatible_type.j
class A{
  Void main() { return; }
}

class B{
  String a;
  Void f() {
    a = 5;
  }
}
